--- a/src/app/image-gallary/image-gallary.component.html
+++ b/src/app/image-gallary/image-gallary.component.html
@@ -1,3 +1,4 @@
+<ngx-file-drop dropZoneLabel="Drop your files here!!" (onFileDrop)="dropped($event)"></ngx-file-drop>
 
 <input type="file" multiple (change)="onfileSelected($event)">
 <mat-list >
